--- a/Mediator/Mediator.csproj
+++ b/Mediator/Mediator.csproj
@@ -43,8 +43,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="An148.cs" />
+    <Compile Include="An2.cs" />
+    <Compile Include="ITrafficControl.cs" />
+    <Compile Include="Plane.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TrafficControlTower.cs" />
+    <Compile Include="Tu144.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
